// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design Systems/Button Inverse 1`] = `
<button
  className="sc-AxjAm gBPCBv"
  size="md"
  style={Object {}}
>
  <p
    className="sc-AxhCb iCUHgP"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Large 1`] = `
<button
  className="sc-AxjAm UKiHR"
  size="lg"
  style={Object {}}
>
  <p
    className="sc-AxhCb iCUHgP"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Medium 1`] = `
<button
  className="sc-AxjAm cvqeIJ"
  size="md"
  style={Object {}}
>
  <p
    className="sc-AxhCb iCUHgP"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button Small 1`] = `
<button
  className="sc-AxjAm fNGIKE"
  size="sm"
  style={Object {}}
>
  <p
    className="sc-AxhCb iCUHgP"
    style={Object {}}
  >
    Button
  </p>
</button>
`;

exports[`Storyshots Design Systems/Button/Custom Cookie 1`] = `
<div
  className="sc-fznZeY iUeFbD"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-AxmLO jPsGPL normal"
    style={Object {}}
  >
    <p
      className="sc-AxhCb iCUHgP"
      style={Object {}}
    >
      Save Settings
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Custom Cookie Inverse 1`] = `
<div
  className="sc-fznZeY iUeFbD"
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-AxmLO jPsGPL inverse"
    style={Object {}}
  >
    <p
      className="sc-AxhCb iCUHgP"
      style={Object {}}
    >
      Cookie Preferences
    </p>
  </button>
</div>
`;

exports[`Storyshots Design Systems/Button/Custom Globe 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-fzozJi eHoYAr"
  style={Object {}}
>
  <div
    className="sc-fzpans kOqDuY"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-fzoLsD fWlRhz globe"
      style={Object {}}
    >
      <svg
        viewBox="0 0 16 16"
      >
        <path
          d="m8.002.25a7.77 7.77 0 0 1 7.748 7.776 7.75 7.75 0 0 1 -7.521 7.72l-.246.004a7.75 7.75 0 0 1 -7.73-7.513l-.003-.245a7.75 7.75 0 0 1 7.752-7.742zm1.949 8.5h-3.903c.155 2.897 1.176 5.343 1.886 5.493l.068.007c.68-.002 1.72-2.365 1.932-5.23zm4.255 0h-2.752c-.091 1.96-.53 3.783-1.188 5.076a6.257 6.257 0 0 0 3.905-4.829zm-9.661 0h-2.75a6.257 6.257 0 0 0 3.934 5.075c-.615-1.208-1.036-2.875-1.162-4.686l-.022-.39zm1.188-6.576-.115.046a6.257 6.257 0 0 0 -3.823 5.03h2.75c.085-1.83.471-3.54 1.059-4.81zm2.262-.424c-.702.002-1.784 2.512-1.947 5.5h3.904c-.156-2.903-1.178-5.343-1.892-5.494l-.065-.007zm2.28.432.023.05c.643 1.288 1.069 3.084 1.157 5.018h2.748a6.275 6.275 0 0 0 -3.929-5.068z"
        />
      </svg>
    </div>
    <div
      className="sc-AxirZ geEfWa sc-fzoLsD fWlRhz arrow"
      style={Object {}}
    >
      <svg
        viewBox="0 0 256 256"
      >
        <g>
          <g>
            <polygon
              points="225.813,48.907 128,146.72 30.187,48.907 0,79.093 128,207.093 256,79.093 		"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Custom Menu 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-fzplWN kYhxzC"
  style={Object {}}
>
  <div
    className="sc-fznyAO jTttdB"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-fznKkj bdzOvO bars"
      style={Object {}}
    >
      <svg
        viewBox="0 0 448 512"
      >
        <path
          d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"
        />
      </svg>
    </div>
    <div
      className="sc-AxirZ geEfWa sc-fznKkj bdzOvO avatar"
      style={Object {}}
    >
      <svg
        viewBox="0 0 32 32"
      >
        <path
          d="m16 .7c-8.437 0-15.3 6.863-15.3 15.3s6.863 15.3 15.3 15.3 15.3-6.863 15.3-15.3-6.863-15.3-15.3-15.3zm0 28c-4.021 0-7.605-1.884-9.933-4.81a12.425 12.425 0 0 1 6.451-4.4 6.507 6.507 0 0 1 -3.018-5.49c0-3.584 2.916-6.5 6.5-6.5s6.5 2.916 6.5 6.5a6.513 6.513 0 0 1 -3.019 5.491 12.42 12.42 0 0 1 6.452 4.4c-2.328 2.925-5.912 4.809-9.933 4.809z"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Button/Custom Search 1`] = `
<button
  className="sc-AxjAm jCtvLM sc-AxhUy brOdhp"
  style={Object {}}
>
  <div
    className="sc-AxgMl doShmx"
    style={Object {}}
  >
    <div
      className="sc-AxirZ geEfWa sc-AxheI clmUzO"
      style={Object {}}
    >
      <svg
        viewBox="0 0 56.966 56.966"
      >
        <path
          d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
        />
      </svg>
    </div>
    <p
      className="sc-AxhCb iCUHgP sc-Axmtr cctsr"
      style={Object {}}
    >
      Search
    </p>
  </div>
</button>
`;

exports[`Storyshots Design Systems/Card/Dark Large 1`] = `
<div
  className="sc-fzpjYC hYlkHg large"
  style={Object {}}
>
  <div
    className="sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx large"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoLag cDaknW"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Medium 1`] = `
<div
  className="sc-fzpjYC hYlkHg medium"
  style={Object {}}
>
  <div
    className="sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoLag cDaknW"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Dark Small 1`] = `
<div
  className="sc-fzpjYC hYlkHg small"
  style={Object {}}
>
  <div
    className="sc-fzokOt iojPmO"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="darkcard-sm.png"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoLag cDaknW"
        style={Object {}}
      >
        Fruits de mer with Michelin chef Marc Favier
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Base 1`] = `
<div
  className="sc-fznxsB jAhmzW single"
  style={Object {}}
>
  <div
    className="sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoyAV ghLmaN"
        style={Object {}}
      >
        Online experiences
      </p>
      <p
        className="sc-AxhCb iCUHgP sc-fzoXzr fUSqYp"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light Multiple 1`] = `
<div
  className="sc-fznxsB jAhmzW multiple"
  style={Object {}}
>
  <div
    className="sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoXzr fUSqYp"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoXzr fUSqYp"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
  <div
    className="sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoXzr fUSqYp"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Light No Title 1`] = `
<div
  className="sc-fznxsB jAhmzW single"
  style={Object {}}
>
  <div
    className="sc-fzokOt bIXlJm"
    style={Object {}}
  >
    <div
      className="sc-fzqBZW gIodXL"
      style={Object {}}
    >
      <img
        alt="card-image"
        className="sc-AxiKw kRufkD"
        src="card1.jpg"
      />
    </div>
    <div
      className="sc-fzqNJr crcRSx normal"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoXzr fUSqYp"
        style={Object {}}
      >
        Unique activities we can do together, led by a world of hosts
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Card/Section Black Lives Matter 1`] = `
<div
  className="sc-fznJRM kykwQp"
  style={Object {}}
>
  <div
    className="sc-fznWqX dEfZlr"
    style={Object {}}
  >
    <div
      className="sc-fzoiQi eGwVwj"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzqARJ gdMEfS"
        style={Object {}}
      >
        We stand with #BlackLivesMatter
      </p>
      <p
        className="sc-AxhCb iCUHgP sc-fzqNqU bOFFQh"
        style={Object {}}
      >
        We believe in a world where everyone belongs. We reject all racism that stands in the way.
      </p>
      <p
        className="sc-AxhCb iCUHgP sc-fzoyTs fOekTr"
        style={Object {}}
      >
        Donate
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/Header Landing 1`] = `
<div
  className="sc-fzoydu dSPMia"
  style={Object {}}
>
  <div>
    header
  </div>
</div>
`;

exports[`Storyshots Design Systems/Notification Cookie 1`] = `
<div
  style={Object {}}
>
  <div
    className="sc-fzoJMP bjsWfc"
    style={Object {}}
  >
    <div
      className="sc-fzoYHE fatmjR"
      style={Object {}}
    >
      <div
        className="sc-fznAgC dZyPne text"
        style={Object {}}
      >
        <div
          className="sc-fzpkqZ cfhoIU"
          style={Object {}}
        >
          <p
            className="sc-AxhCb iCUHgP sc-fzomuh gpXCWr"
            style={Object {}}
          >
            Your Privacy
          </p>
          <div
            className="sc-AxirZ geEfWa sc-fznLPX fCfarn"
            style={Object {}}
          >
            <svg
              viewBox="0 0 448 512"
            >
              <path
                d="M400 224h-24v-72C376 68.2 307.8 0 224 0S72 68.2 72 152v72H48c-26.5 0-48 21.5-48 48v192c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48V272c0-26.5-21.5-48-48-48zm-104 0H152v-72c0-39.7 32.3-72 72-72s72 32.3 72 72v72z"
              />
            </svg>
          </div>
        </div>
        <p
          className="sc-AxhCb iCUHgP sc-fzqAui cVpVPY"
          style={Object {}}
        >
          We use cookies to help personalize content, tailor and measure ads, and provide a safer experience. By navigating the site, you agree to the use of cookies to collect information on and off Airbnb. Read our Cookie Policy to learn more or go to Cookie Preferences to manage your settings
        </p>
      </div>
      <div
        className="sc-fznAgC dZyPne buttons"
        style={Object {}}
      >
        <div
          className="sc-fzoaKM llHyKh"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-AxmLO jPsGPL normal"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhCb iCUHgP"
              style={Object {}}
            >
              Save Settings
            </p>
          </button>
          <button
            className="sc-AxjAm jCtvLM sc-AxmLO jPsGPL inverse"
            onClick={[Function]}
            style={Object {}}
          >
            <p
              className="sc-AxhCb iCUHgP"
              style={Object {}}
            >
              Cookie Preferences
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Large 1`] = `
<div
  style={Object {}}
>
  <div
    style={Object {}}
  >
    <div
      className="sc-fzoNJl eAQFaU"
      style={Object {}}
    >
      <div
        className="sc-fzoxKX eMqSdu"
        style={Object {}}
      >
        <div
          className="sc-fzoXWK hWPdmI first"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fzpmMD eIooq first"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzolEj PObja"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Location
              </p>
            </div>
            <div
              className="sc-fzqBkg dFynNp"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Where are you going?
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fzoXWK hWPdmI second"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fzpmMD eIooq"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzolEj PObja"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Check in
              </p>
            </div>
            <div
              className="sc-fzqBkg dFynNp"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Add dates
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fzoXWK hWPdmI third"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fzpmMD eIooq"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzolEj PObja"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Check out
              </p>
            </div>
            <div
              className="sc-fzqBkg dFynNp"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Add dates
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fznxKY dVpSmd"
          style={Object {}}
        >
          <button
            className="sc-AxjAm jCtvLM sc-fzpmMD eIooq last"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-fzolEj PObja"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Guests
              </p>
            </div>
            <div
              className="sc-fzqBkg dFynNp"
              style={Object {}}
            >
              <p
                className="sc-AxhCb iCUHgP"
                style={Object {}}
              >
                Add guests
              </p>
            </div>
          </button>
          <button
            className="sc-AxjAm jCtvLM sc-AxhUy brOdhp sc-fznWOq hHdHDp"
            onClick={[Function]}
            style={Object {}}
          >
            <div
              className="sc-AxgMl doShmx"
              style={Object {}}
            >
              <div
                className="sc-AxirZ geEfWa sc-AxheI clmUzO"
                style={Object {}}
              >
                <svg
                  viewBox="0 0 56.966 56.966"
                >
                  <path
                    d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
                  />
                </svg>
              </div>
              <p
                className="sc-AxhCb iCUHgP sc-Axmtr cctsr"
                style={Object {}}
              >
                Search
              </p>
            </div>
          </button>
        </div>
        <div
          className="sc-fznMAR bZkVBM first"
          style={Object {}}
        />
        <div
          className="sc-fznMAR bZkVBM second"
          style={Object {}}
        />
        <div
          className="sc-fznMAR bZkVBM third"
          style={Object {}}
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Medium 1`] = `
<div
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fzoKki ddrhXQ"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="sc-fzoYkl iUorzl"
      style={Object {}}
    >
      <div
        className="sc-AxirZ geEfWa sc-fzpkJw hpTQge"
        style={Object {}}
      >
        <svg
          viewBox="0 0 56.966 56.966"
        >
          <path
            d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
          />
        </svg>
      </div>
      <p
        className="sc-AxhCb iCUHgP sc-fznzOf cVkzOC"
        style={Object {}}
      >
        Where are you going?
      </p>
    </div>
  </button>
</div>
`;

exports[`Storyshots Design Systems/SearchBar Small 1`] = `
<div
  style={Object {}}
>
  <button
    className="sc-AxjAm jCtvLM sc-fznMnq iRjBOH"
    onClick={[Function]}
    style={Object {}}
  >
    <div
      className="sc-fzqMAW jIaOyw"
      style={Object {}}
    >
      <p
        className="sc-AxhCb iCUHgP sc-fzoant cRBONy"
        style={Object {}}
      >
        Start your search
      </p>
      <div
        className="sc-fzomME gmQuwk"
        style={Object {}}
      >
        <div
          className="sc-AxirZ geEfWa sc-fzqAbL gFKclh"
          style={Object {}}
        >
          <svg
            viewBox="0 0 56.966 56.966"
          >
            <path
              d="M55.146,51.887L41.588,37.786c3.486-4.144,5.396-9.358,5.396-14.786c0-12.682-10.318-23-23-23s-23,10.318-23,23 s10.318,23,23,23c4.761,0,9.298-1.436,13.177-4.162l13.661,14.208c0.571,0.593,1.339,0.92,2.162,0.92 c0.779,0,1.518-0.297,2.079-0.837C56.255,54.982,56.293,53.08,55.146,51.887z M23.984,6c9.374,0,17,7.626,17,17s-7.626,17-17,17 s-17-7.626-17-17S14.61,6,23.984,6z"
            />
          </svg>
        </div>
      </div>
    </div>
  </button>
</div>
`;
